# tritony

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  packaging.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pre-commit_pytest.yml  wheels.yml
example/: image_client.py
model_repository/sample/: config.pbtxt
model_repository/sample/1/: model.py
model_repository/sample_autobatching/: config.pbtxt
model_repository/sample_autobatching/1/: model.py
model_repository/sample_multiple/: config.pbtxt
model_repository/sample_multiple_hybrid_dims/: config.pbtxt
model_repository/sample_multiple_hybrid_dims/1/: model.py
model_repository/sample_optional/: config.pbtxt
model_repository/sample_optional/1/: model.py
model_repository/sample_sleep_1sec/: config.pbtxt
model_repository/sample_sleep_1sec/1/: model.py
tests/: common_fixtures.py  test_async_connect.py  test_connect.py  test_model_call.py
tritony/: __init__.py  helpers.py  tools.py  version.py
