[pycodestyle]
max-line-length=120
ignore = E203,W503

[metadata]
name = tritony
version = attr: tritony.version.__version__
description = Tiny configuration for Triton Inference Server
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/rtzr/tritony
author = Arthur Kim, RTZR team
author_email = arthur@rtzr.ai
keywords = grpc, http, triton, tensorrt, inference, server, service, client, nvidia, rtzr
license = BSD
license_files = LICENSE
license_file_content_type = text/plain; charset=UTF-8
project_urls =
    Download = https://pypi.org/project/tritony/#files
    Source = https://github.com/rtzr/tritony
    Tracker = https://github.com/rtzr/tritony/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent


[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =.
install_requires =
    tritonclient[all]>=2.34.0
    protobuf>=3.5.0
    orjson>=3.6.8
    reretry>=0.11.1
    attrs>=21.2.0

[options.packages.find]
exclude =
    tests*
    tools*
    docs*

# https://github.com/triton-inference-server/client/blob/main/src/python/library/setup.py#L118
# official package is supporting python 3.6+, but python 3.6, 3.7 is not supported.
# https://devguide.python.org/versions/
python_requires = >=3.8


[options.extras_require]
tests =
    pytest-xdist
    pytest-mpl
    pytest-cov
    pytest
    pre-commit
    coveralls
display =
    matplotlib >= 3.3.0